<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="UserBinding">

        <variable
            name="usermodel"
            type="com.example.varun.learningkotlinmvvm.ViewModel.UserViewModel" />
    </data>

<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/margin_common"
        android:layout_marginStart="@dimen/margin_common"
        android:layout_marginTop="132dp"
        android:hint="@string/txt_hint_name"
        android:textSize="@dimen/txt_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/margin_common"
        android:layout_marginStart="@dimen/margin_common"
        android:layout_marginTop="48dp"
        android:textSize="@dimen/txt_size"
        android:hint="@string/txt_hint_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_name" />

    <Button
        android:id="@+id/btn_save"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/margin_common"
        android:layout_marginStart="@dimen/margin_common"
        android:layout_marginTop="92dp"
        android:text="@string/btn_save"
        android:textSize="@dimen/txt_size"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email" />


</android.support.constraint.ConstraintLayout>

</layout>