<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_common"
        android:layout_marginStart="@dimen/margin_common"
        android:layout_marginTop="136dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_txt_write"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/txt_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="@dimen/margin_common"
        android:layout_marginStart="@dimen/margin_common"
        android:layout_marginTop="72dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_txt_read"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/txt_size"
        app:layout_constraintBottom_toTopOf="@+id/btn_readall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_write" />


    <Button
        android:id="@+id/btn_readall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_txt_readwrite"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/txt_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
